Completed testing of PluginRegistrarProvider

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,4 +54,4 @@ include_directories("${source_dir}/include")
 add_subdirectory(SharedLibraryTest)
 add_subdirectory(PluginTest)
 add_subdirectory(KernelTest)
-add_subdirectory(PluginRegistrarFactory)
+add_subdirectory(PluginRegistrarProviderTest)
