--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1.0)
 
-# add_subdirectory(Kernel)
+add_subdirectory(Kernel)
 add_subdirectory(PluginRegistrarProvider)
 add_subdirectory(Plugin)
 add_subdirectory(SharedLibraryLoader)
