Templated the PluginRegistrationSerivce.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(Kernel)
 add_subdirectory(PluginRegistrarProvider)
 add_subdirectory(Plugin)
 add_subdirectory(SharedLibraryLoader)
+add_subdirectory(PluginRegistrationService)
