--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.1.0)
 add_subdirectory(SharedLibraryTest)
 add_subdirectory(PluginTest)
 add_subdirectory(PluginRegistrarProviderTest)
+add_subdirectory(PluginRegistrationServiceTest)
 add_subdirectory(KernelTest)
