--- a/test/AcceptanceTests/UserCase01/CMakeLists.txt
+++ b/test/AcceptanceTests/UserCase01/CMakeLists.txt
@@ -1,15 +1,16 @@
 cmake_minimum_required(VERSION 3.1.0)
-project (PluginRegistrationServiceTest)
+project(UserCase01 C CXX)
 
 file(GLOB SRCS *.cpp *.h ../main.cpp)
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-	libPluginRegistrationService
     libgtest
     libgmock
 )
+
+set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 add_test(NAME ${PROJECT_NAME}
          COMMAND ${PROJECT_NAME})
