--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(SharedLibraryTest)
 add_subdirectory(PluginTest)
 add_subdirectory(PluginRegistrarProviderTest)
 add_subdirectory(PluginRegistrationServiceTest)
-add_subdirectory(KernelTest)
+# add_subdirectory(KernelTest)
